# paper-qa-s

./: pyproject.toml
paperqa/: docs.py  prompts.py  types.py
