[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=62.6.0"]

[project]
name = "paperqas"
version = "4.5.2"
description = "LLM Chain for answering questions from docs"
readme = "README.md"
authors = [
    {name = "Andrew White", email = "white.d.andrew@gmail.com"},
    {name = "James Braza", email = "jamesbraza@gmail.com"}
]
maintainers = [
    {name = "Andrew White", email = "white.d.andrew@gmail.com"},
    {name = "James Braza", email = "jamesbraza@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "PyCryptodome",
    "html2text",
    "numpy",
    "openai>=1",
    "pydantic>=2",
    "pypdf",
    "tiktoken>=0.4.0",
]
urls = {repository = "https://github.com/inproxima/paper-qa-s"}

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-regex = ".{1024}|.*codespell-ignore.*"
ignore-words-list = "aadd,ser"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
unsafe-fixes = true

[tool.setuptools.packages.find]
include = ["paperqa*"]

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
